--- a/dictionary.html
+++ b/dictionary.html
@@ -67,7 +67,7 @@
     </div>
     <footer>
       <p>Made with Love by <a href="#">Kara C</a></p>
-      <p>Styled out by <span>WRITE YOUR NAME HERE!!</span></p>
+      <p>Styled out by <span>Danielle Kavanaugh</span></p>
     </footer>
   </body>
 </html>
