--- a/First Project/Webpage Elements/Homepage.html
+++ b/First Project/Webpage Elements/Homepage.html
@@ -50,9 +50,8 @@
   </div>
 </div>
 
-#why are u not centered??
 
-<div class= "main menu">
+<div class= "main-menu">
   <div id= "About">
   <h3>About Us</h3>
 </div>
