--- a/First Project/Bootstrap Theme/index.html
+++ b/First Project/Bootstrap Theme/index.html
@@ -129,19 +129,19 @@
         <!-- Wrapper for slides -->
         <div class="carousel-inner">
             <div class="item active">
-                <div class="fill" style="background-image:url('https://raw.githubusercontent.com/dkavanaugh435/Think-Launch-Project/master/First%20Project/Bootstrap%20Theme/Images/concert-604215_1280.jpg One');"></div>
+                <div class="fill" style="background-image:url('/Images/artist-1838653_1920.jpg');"></div>
                 <div class="carousel-caption">
                     <h2>Caption 1</h2>
                 </div>
             </div>
             <div class="item">
-                <div class="fill" style="background-image:url('http://placehold.it/1900x1080&text=Slide Two');"></div>
+                <div class="fill" style="background-image:url('https://raw.githubusercontent.com/dkavanaugh435/Think-Launch-Project/master/First%20Project/Bootstrap%20Theme/Images/apple-1836071_1280.jpg Two');"></div>
                 <div class="carousel-caption">
                     <h2>Caption 2</h2>
                 </div>
             </div>
             <div class="item">
-                <div class="fill" style="background-image:url('http://placehold.it/1900x1080&text=Slide Three');"></div>
+                <div class="fill" style="background-image:url('https://raw.githubusercontent.com/dkavanaugh435/Think-Launch-Project/master/First%20Project/Bootstrap%20Theme/Images/audience-1850665_1920.jpg');"></div>
                 <div class="carousel-caption">
                     <h2>Caption 3</h2>
                 </div>
