--- a/First Project/Bootstrap Theme/index.html
+++ b/First Project/Bootstrap Theme/index.html
@@ -131,19 +131,19 @@
             <div class="item active">
                 <div class="fill" style="background-image:url('https://raw.githubusercontent.com/dkavanaugh435/Think-Launch-Project/master/First%20Project/Bootstrap%20Theme/Images/artist-1838653_1920.jpg');"></div>
                 <div class="carousel-caption">
-                    <h2>Caption 1</h2>
+                    <h2>Connect</h2>
                 </div>
             </div>
             <div class="item">
                 <div class="fill" style="background-image:url('https://raw.githubusercontent.com/dkavanaugh435/Think-Launch-Project/master/First%20Project/Bootstrap%20Theme/Images/apple-1836071_1280.jpg');"></div>
                 <div class="carousel-caption">
-                    <h2>Caption 2</h2>
+                    <h2>Discover</h2>
                 </div>
             </div>
             <div class="item">
                 <div class="fill" style="background-image:url('https://raw.githubusercontent.com/dkavanaugh435/Think-Launch-Project/master/First%20Project/Bootstrap%20Theme/Images/audience-1850665_1920.jpg');"></div>
                 <div class="carousel-caption">
-                    <h2>Caption 3</h2>
+                    <h2>Explore</h2>
                 </div>
             </div>
         </div>
@@ -163,32 +163,7 @@
         <!-- Marketing Icons Section -->
 
         <!-- Portfolio Section -->
-        <div class="row">
-            <div class="col-lg-12">
-                <h2 class="page-header">Welcome</h2>
-            </div>
-            <div class="col-md-4 col-sm-6">
-                <a href="portfolio-item.html">
-                    <img class="img-responsive img-portfolio img-hover" src="https://raw.githubusercontent.com/dkavanaugh435/Think-Launch-Project/master/First%20Project/Bootstrap%20Theme/Images/pexels-photo-167579.jpeg" alt="">
-                </a>
-                <div class="value-props-caption">
-                    <h3>Connect</h3>
-            </div>
-            <div class="col-md-4 col-sm-6">
-                <a href="portfolio-item.html">
-                    <img class="img-responsive img-portfolio img-hover" src="https://raw.githubusercontent.com/dkavanaugh435/Think-Launch-Project/master/First%20Project/Bootstrap%20Theme/Images/connect.jpeg" alt="">
-                    <div class="value-props-caption">
-                        <h3>Connect</h3>
-                </a>
-            </div>
-            <div class="col-md-4 col-sm-6">
-                <a href="portfolio-item.html">
-                    <img class="img-responsive img-portfolio img-hover" src="" alt="https://raw.githubusercontent.com/dkavanaugh435/Think-Launch-Project/master/First%20Project/Bootstrap%20Theme/Images/discover.jpg">
-                    <div class="value-props-caption">
-                        <h3>Discover</h3>
-                </a>
-            </div>
-        </div>
+
         <!-- /.row -->
 
         <!-- Features Section -->
