--- a/First Project/Bootstrap Theme/index.html
+++ b/First Project/Bootstrap Theme/index.html
@@ -164,6 +164,32 @@
         <!-- Marketing Icons Section -->
 
         <!-- Portfolio Section -->
+        <div class="row">
+
+            <div class="col-lg-12">
+                <h3 class="page-header">Related Projects</h3>
+            </div>
+
+            <div class="col-sm-3 col-xs-6">
+                <a href="#">
+                    <img class="img-responsive portfolio-item" src="https://raw.githubusercontent.com/dkavanaugh435/Think-Launch-Project/master/First%20Project/Bootstrap%20Theme/Images/discover.jpg" alt="">
+                </a>
+            </div>
+
+            <div class="col-sm-3 col-xs-6">
+                <a href="#">
+                    <img class="img-responsive portfolio-item" src="https://raw.githubusercontent.com/dkavanaugh435/Think-Launch-Project/master/First%20Project/Bootstrap%20Theme/Images/connect.jpeg" alt="">
+                </a>
+            </div>
+
+            <div class="col-sm-3 col-xs-6">
+                <a href="#">
+                    <img class="img-responsive portfolio-item" src="https://raw.githubusercontent.com/dkavanaugh435/Think-Launch-Project/master/First%20Project/Bootstrap%20Theme/Images/pexels-photo-167579.jpeg" alt="">
+                </a>
+            </div>
+
+
+        </div>
 
         <!-- /.row -->
 
