--- a/First Project/Bootstrap Theme/index.html
+++ b/First Project/Bootstrap Theme/index.html
@@ -15,6 +15,12 @@
     <!-- Bootstrap Core CSS -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
 
+
+
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+
+    <script type="text/javascript" src="index.js"></script>
+
     <!-- Custom CSS -->
     <link href="css/modern-business.css" rel="stylesheet">
 
@@ -114,6 +120,7 @@
 
         <!-- Portfolio Section -->
         <div class="row">
+          <h2 id="concerts"> </h2>
 
             <div class="col-lg-12">
                 <h3 class="page-header">Related Projects</h3>
