--- a/First Project/Bootstrap Theme/index.html
+++ b/First Project/Bootstrap Theme/index.html
@@ -91,7 +91,7 @@
                 </div>
             </div>
             <div class="item">
-                <div class="fill" style="background-image:url('https://raw.githubusercontent.com/dkavanaugh435/Think-Launch-Project/master/First%20Project/Bootstrap%20Theme/Images/apple-1836071_1280.jpg');"></div>
+                <div class="fill" style="background-image:url('https://github.com/dkavanaugh435/Think-Launch-Project/blob/master/First%20Project/Bootstrap%20Theme/Images/yudifficult.jpeg?raw=true');"></div>
                 <div class="carousel-caption">
                     <h2>Discover</h2>
                 </div>
@@ -141,6 +141,12 @@
             <div class="col-sm-3 col-xs-6">
                 <a href="#">
                     <img class="img-responsive portfolio-item" src="https://raw.githubusercontent.com/dkavanaugh435/Think-Launch-Project/master/First%20Project/Bootstrap%20Theme/Images/pexels-photo-167579.jpeg" alt="">
+                </a>
+            </div>
+
+            <div class="col-sm-3 col-xs-6">
+                <a href="#">
+                    <img class="img-responsive portfolio-item" src="https://raw.githubusercontent.com/dkavanaugh435/Think-Launch-Project/master/First%20Project/Bootstrap%20Theme/Images/pexels-photo.jpg" alt="">
                 </a>
             </div>
 
