--- a/First Project/Bootstrap Theme/index.html
+++ b/First Project/Bootstrap Theme/index.html
@@ -91,7 +91,7 @@
                 </div>
             </div>
             <div class="item">
-                <div class="fill" style="background-image:url('https://github.com/dkavanaugh435/Think-Launch-Project/blob/master/First%20Project/Bootstrap%20Theme/Images/yudifficult.jpeg?raw=true');"></div>
+                <div class="fill" style="background-image:url('https://raw.githubusercontent.com/dkavanaugh435/Think-Launch-Project/master/First%20Project/Bootstrap%20Theme/Images/yudifficult.jpg');"></div>
                 <div class="carousel-caption">
                     <h2>Discover</h2>
                 </div>
