--- a/First Project/Bootstrap Theme/index.html
+++ b/First Project/Bootstrap Theme/index.html
@@ -123,7 +123,7 @@
           <h2 id="concerts"> </h2>
 
             <div class="col-lg-12">
-                <h3 class="page-header">Related Projects</h3>
+                <h3 class="page-header">Let's jam.</h3>
             </div>
 
             <div class="col-sm-3 col-xs-6">
